--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
+    "multer": "^1.4.3",
     "sharp": "^0.23.0",
     "winston": "^3.1.0"
   },
